--- a/public/css/style.css
+++ b/public/css/style.css
@@ -214,7 +214,7 @@ font-size : 48px;
 	width : 80px;
 	height : 80px;
 	border-radius : 4px;
-	background-color : #ffcc00;
+	background-color : #ffd530;
 	transform : rotate(45deg);
 }
 .scoreSquareT{
@@ -225,7 +225,7 @@ flex-direction: column;
 	height : 80px;
 	border-radius : 4px;
 	background-color : transparent;
-color : white;
+color : #423609;
 	text-align : center;
 	font-size : 60px;
 
@@ -371,8 +371,8 @@ font-size : 24px;
 .scoreStick{
 	display : flex;
 	flex-direction: column;
-	margin-right : 20px;
-	width : 40px;
+	margin-right : 35px;
+	width : 70px;
 	height : 600px;
 	background-color : transparent;
 	transform-origin:bottom;
@@ -380,7 +380,7 @@ font-size : 24px;
 	justify-content: flex-end;
 }
 .scoreStickBar{
-	width : 40px;
+	width : 70px;
 	height : 600px;
 	background-color : #2aff80;
 	transform-origin:bottom;
@@ -388,16 +388,16 @@ font-size : 24px;
 
 .scoreStickSquare{
 	margin-bottom : -20px;
-	width : 40px;
-	height :40px;
+	width : 70px;
+	height :70px;
 	background-color : transparent;
 }
 
 
 .scoreStickR{
 	position : absolute;
-	width : 40px;
-	height :40px;
+	width : 70px;
+	height :70px;
 	background-color : #ffcc00;
 	transform : rotate(45deg);
 }
@@ -406,12 +406,13 @@ font-size : 24px;
 	position : absolute;
 	display : flex;
 	flex-direction : column;
-	width : 40px;
-	height :40px;
+	width : 70px;
+	height :70px;
 	background-color : transparent;
-	color : white;
+	color : #423609;
 	text-align : center;
-	font-size : 24px;
+	font-weight : 600;
+	font-size : 44px;
 
 	justify-content : center;
 }
@@ -422,7 +423,7 @@ font-size : 24px;
 	background-color : white;
 	color : black;
 	text-align : center;
-	font-size : 14px;
+	font-size : 28px;
 }
 
 
